Add commands for W820NB Plus
Set name
Set LDAC mode
Get a lot of settings

Some of the commands are from
https://github.com/GlitchPunkWTF/edifier-proto

--- a/Qt/mainwindow.ui
+++ b/Qt/mainwindow.ui
@@ -63,7 +63,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_4">
+         <widget class="QPushButton" name="readSettingsButton">
           <property name="text">
            <string>Read Settings</string>
           </property>
