--- a/Qt/mainwindow.ui
+++ b/Qt/mainwindow.ui
@@ -25,7 +25,7 @@
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
-        <string>Tab 1</string>
+        <string notr="true">Tab 1</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
