--- a/Qt/basedevice.ui
+++ b/Qt/basedevice.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>W820NBPlusForm</class>
- <widget class="QWidget" name="W820NBPlusForm">
+ <class>BaseDevice</class>
+ <widget class="QWidget" name="BaseDevice">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -17,7 +17,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>W820NB Plus</string>
+   <string>BaseDevice</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_5">
    <item>
