Add support for W200BT Plus
Fix some bugs of Shutdown Timer

--- a/Qt/devices/basedevice.ui
+++ b/Qt/devices/basedevice.ui
@@ -454,6 +454,13 @@
     </widget>
    </item>
    <item>
+    <widget class="QCheckBox" name="autoPoweroffBox">
+     <property name="text">
+      <string>Auto power off if there is no audio input for 30 minutes.</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QPushButton" name="poweroffButton">
      <property name="text">
       <string>Poweroff</string>
