--- a/Qt/mainwindow.ui
+++ b/Qt/mainwindow.ui
@@ -63,11 +63,30 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="readSettingsButton">
-          <property name="text">
-           <string>Read Settings</string>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <property name="leftMargin">
+           <number>0</number>
           </property>
-         </widget>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QComboBox" name="deviceBox"/>
+          </item>
+          <item>
+           <widget class="QPushButton" name="readSettingsButton">
+            <property name="text">
+             <string>Read Settings</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
